Corrections Alignements

--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -1,5 +1,5 @@
 .container {
-  height: 3.5rem;
+  height: 3rem;
   font-family: "GothamRegular", sans-serif !important;
   box-shadow: 0 0 0.3rem 0 rgb(0 0 0 / 35%);
   width: 100%;
@@ -25,14 +25,9 @@
 .navbar {
   display: flex;
   align-items: center;
-  justify-content: first baseline;
-  padding-left: 0 1.2rem;
+  height: 100%;
   width: 90%;
   margin: auto;
-}
-
-.navlinks li .active {
-  color: #fff;
 }
 
 .navlinks li a:hover {
@@ -54,7 +49,6 @@
   color: #fff !important;
   border-radius: 0;
   transition: 0.3s ease;
-  font-family: "GothamMedium" !important;
 }
 
 .menugroup__active a {
@@ -72,7 +66,7 @@
 }
 
 .menu li {
-  padding: 5px 14px;
+  padding: 0.4rem 0.8rem;
   color: #000;
 }
 
