--- a/src/components/pages/Home/CourseItem/CourseItem.module.scss
+++ b/src/components/pages/Home/CourseItem/CourseItem.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  width: 100%;
 }
 
 .text {
@@ -49,6 +50,7 @@
     box-shadow: 0;
     width: 20rem;
     height: fit-content;
+    margin: 0;
   }
 }
 
@@ -133,6 +135,7 @@
   text-align: center;
   font-weight: bold;
   margin: 1rem 0;
+  height: 2rem;
 }
 
 .headertitle {
