--- a/src/components/pages/Home/Home.module.scss
+++ b/src/components/pages/Home/Home.module.scss
@@ -18,6 +18,7 @@
     .typography3 {
       text-align: center;
       margin: 1rem;
+      font-size: 26px;
     }
 
     .typography6 {
@@ -54,10 +55,9 @@
 /* COURSE SECTION */
 
 .course__section {
-  background-color: #fbf9ff;
+  background-color: #fafafa;
   padding: 4rem 0;
-  width: 90%;
-  margin: 0 auto;
+  width: 100%;
   @media only screen and (max-width: 768px) {
     padding: 0;
     width: 100%;
@@ -65,7 +65,6 @@
 }
 
 .courselist {
-  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -316,6 +315,9 @@
     p {
       font-family: "GothamRegular";
       font-size: 18px;
+      @media only screen and (max-width: 768px) {
+        font-size: 16px;
+      }
     }
   }
   &__icon {
